--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 distshare={homedir}/.tox/distshare
 [tox:hudson]
+distshare={toxworkdir}/distshare
 sdistsrc={distshare}/execnet-**LATEST**
 
 [testenv]
