--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ sdistsrc={distshare}/execnet-**LATEST**
 [testenv]
 changedir=testing
 deps= {distshare}/py-**LATEST**
-commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
+commands=py.test --confcutdir=.. \
+            -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 [testenv:py27]
 basepython=python2.7
 [testenv:py26]
@@ -32,4 +33,5 @@ changedir=doc
 deps=sphinx
      py
 commands=
-    py.test -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py 
+    py.test --confcutdir=..
+        -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py 
