add a new env:NAME=value setting to xspecs bump version to 1.0.7

--- a/tox.ini
+++ b/tox.ini
@@ -33,5 +33,5 @@ changedir=doc
 deps=sphinx
      py
 commands=
-    py.test --confcutdir=..
+    py.test --confcutdir=.. \
         -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py 
