--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,11 @@
 distshare={homedir}/.tox/distshare
 [tox:hudson]
 distshare={toxworkdir}/distshare
-sdistsrc={distshare}/execnet-**LATEST**
+sdistsrc={distshare}/execnet-*
 
 [testenv]
 changedir=testing
-deps= {distshare}/py-**LATEST**
+deps= {distshare}/py-*
 commands=py.test --confcutdir=.. \
             -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 [testenv:py27]
