--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,22 @@
 [tox]
+envlist=py24,py31,py25,py26,py27,docs
 distshare={homedir}/.tox/distshare
+indexserver=default http://pypi.testrun.org
+
 [tox:hudson]
 distshare={toxworkdir}/distshare
 sdistsrc={distshare}/execnet-*
+indexserver=default http://pypi.testrun.org
 
 [testenv]
 changedir=testing
-deps= {distshare}/py-*
-commands=py.test --confcutdir=.. \
-            -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
-[testenv:py27]
-basepython=python2.7
-[testenv:py26]
-basepython=python2.6
-[testenv:py26-py131]
+deps= pytest
+commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
+
+[testenv:py26-py134]
 basepython=python2.6
 deps= py==1.3.1
-[testenv:py25]
-basepython=python2.5
-[testenv:py24]
-basepython=python2.4
-[testenv:py31]
-basepython=python3.1
+
 #[testenv:pypy]
 #basepython=pypy-c
 [testenv:jython]
@@ -33,5 +28,5 @@ changedir=doc
 deps=sphinx
      py
 commands=
-    py.test --confcutdir=.. \
+    py.test \
         -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py
