--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,20 @@
 [tox]
 envlist=py24,py31,py25,py26,py27,docs
 distshare={homedir}/.tox/distshare
-indexserver=default http://pypi.testrun.org
+indexserver=
+    default=http://pypi.testrun.org
+    pypi=http://pypi.python.org/simple
 
 [tox:hudson]
 distshare={toxworkdir}/distshare
 sdistsrc={distshare}/execnet-*
-indexserver=default http://pypi.testrun.org
+indexserver=
+    default=http://pypi.testrun.org
+    pypi=http://pypi.python.org/simple
 
 [testenv]
 changedir=testing
-deps= pytest
+deps=pytest
 commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
 [testenv:py26-py134]
@@ -25,7 +29,7 @@ basepython=jython
 [testenv:docs]
 basepython=python
 changedir=doc
-deps=sphinx
+deps=:pypi:sphinx
      py
 commands=
     py.test \
