--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps= py==1.3.1
 #[testenv:pypy]
 #basepython=pypy-c
 [testenv:jython]
-basepython=jython
+commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
 [testenv:docs]
 basepython=python
