--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ basepython=python
 changedir=doc
 deps=:pypi:sphinx
      py
+     pytest
 commands=
     py.test \
         -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py
