adapt to pytest-2.2 and update tests abit, there still is one palce with metafunc.addcall()s remaining in test_serializer.py

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ indexserver=
 
 [testenv]
 changedir=testing
-deps=pytest
+deps=pytest>=2.2.0.dev8
 commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
 [testenv:py26-py134]
@@ -30,7 +30,7 @@ commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 basepython=python
 changedir=doc
 deps=:pypi:sphinx
-     py
+     pytest
 commands=
     py.test \
         -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py
