--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py24,py31,py32,py25,py26,py27,docs
+envlist=py24,py31,py32,py25,py26,py27,docs,pypy
 distshare={homedir}/.tox/distshare
 indexserver=
     default=http://pypi.testrun.org
