use timeout plugin, simplify tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,16 @@
 [tox]
 envlist=py24,py32,py25,py26,py27,docs,pypy
 distshare={homedir}/.tox/distshare
-indexserver=
-    default=http://pypi.testrun.org
-    pypi=http://pypi.python.org/simple
 
 [tox:hudson]
 distshare={toxworkdir}/distshare
 sdistsrc={distshare}/execnet-*
-indexserver=
-    default=http://pypi.testrun.org
-    pypi=http://pypi.python.org/simple
 
 [testenv]
 changedir=testing
 deps=pytest>=2.2.0.dev8
+     pytest-timeout
 commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
-
-[testenv:py26-py134]
-basepython=python2.6
-deps= py==1.3.1
 
 #[testenv:pypy]
 #basepython=pypy-c
@@ -29,8 +20,11 @@ commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 [testenv:docs]
 basepython=python
 changedir=doc
-deps=:pypi:sphinx
+deps=sphinx
      pytest
 commands=
     py.test \
         -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py
+
+[pytest]
+timeout = 20
