--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py24,py32,py25,py26,py27,docs,pypy
+envlist=py25,py26,py27,py32,py33,pypy
 distshare={homedir}/.tox/distshare
 
 [tox:hudson]
@@ -8,12 +8,10 @@ sdistsrc={distshare}/execnet-*
 
 [testenv]
 changedir=testing
-deps=pytest>=2.2.0.dev8
+deps=pytest
      pytest-timeout
 commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
-#[testenv:pypy]
-#basepython=pypy-c
 [testenv:jython]
 commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
