various fixes related to flakes checking

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,10 @@ commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 [testenv:jython]
 commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
+[testenv:flakes]
+deps=pytest-flakes
+commands= py.test --flakes -m flakes 
+
 [testenv:docs]
 basepython=python
 changedir=doc
