correct flakes environment and confine tests to testing directory

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py32,py33,pypy
+envlist=py26,py27,py32,py33,pypy,flakes
 distshare={homedir}/.tox/distshare
 
 [tox:hudson]
@@ -12,12 +12,13 @@ deps=pytest
      pytest-timeout
 commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
 
+[testenv:flakes]
+changedir=
+deps=pytest-flakes
+commands = py.test -m flakes --flakes execnet testing
+
 [testenv:jython]
 commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
-
-[testenv:flakes]
-deps=pytest-flakes
-commands= py.test --flakes -m flakes 
 
 [testenv:docs]
 basepython=python
