use subprocess32 when available for python < 3

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,12 @@ deps=sphinx
 commands=
     py.test -rsfxX -v check_sphinx.py
 
+[testenv:subprocess32]
+basepython=python2.7
+deps=pytest
+     pytest-timeout
+     subprocess32
+
 [pytest]
 timeout = 20
 addopts = -rxXs
