flake8 clean the shell script

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ commands=py.test -rsfxX {posargs}
 
 [testenv:flakes]
 changedir=
-deps=pytest-flakes
-commands = py.test -m flakes --flakes execnet testing
+deps= flake8
+commands = pyflakes setup.py execnet testing
 
 [testenv:jython]
 commands=jython -m pytest -rsfxX {posargs}
