begin flake8 cleaning

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands=py.test -rsfxX {posargs}
 [testenv:flakes]
 changedir=
 deps= flake8
-commands = pyflakes setup.py execnet testing
+commands = flake8 setup.py execnet testing
 
 [testenv:jython]
 commands=jython -m pytest -rsfxX {posargs}
