tox envs to facilitate pypi uploads

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,23 @@ deps=pytest
      pytest-timeout
      subprocess32
 
+[testenv:upload-devpi]
+changedir=.
+deps=hgdistver
+     wheel
+     devpi
+commands=
+        devpi upload --no-vcs --formats sdist,bdist_wheel
+
+[testenv:upload-release]
+changedir=.
+deps=hgdistver
+     wheel
+     setuptools
+commands=
+    python setup.py register sdist bdist_wheel upload
+
+
 [pytest]
 timeout = 20
 addopts = -rxXs
