finish flake8 clean

--- a/tox.ini
+++ b/tox.ini
@@ -52,4 +52,4 @@ addopts = -rxXs
 rsyncdirs = execnet testing
 
 [flake8]
-exclude = .env/,.tox/,build/,dist/
+exclude = .env/,.tox/,build/,dist/,execnet/apipkg.py
