--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,10 @@ envlist=py26,py27,py33,py34,pypy,flakes
 
 [testenv]
 changedir=testing
-deps=pytest
-     pytest-timeout
+deps=
+    apipkg
+    pytest
+    pytest-timeout
 commands=py.test -rsfxX {posargs}
 
 [testenv:flakes]
@@ -28,6 +30,7 @@ basepython=python2.7
 deps=pytest
      pytest-timeout
      subprocess32
+     apipkg
 
 [testenv:upload-devpi]
 changedir=.
